fix: product text being center aligned

--- a/src/components/market/market.scss
+++ b/src/components/market/market.scss
@@ -22,6 +22,7 @@
   &__product {
     margin: 25px;
     flex: 1;
+    text-align: left;
     cursor: pointer;
   }
   &__img-container {
